--- a/index.css
+++ b/index.css
@@ -6,6 +6,15 @@
     --invert: 1;
 }
 
+.noselect {
+    -webkit-touch-callout: none;
+      -webkit-user-select: none;
+       -khtml-user-select: none;
+         -moz-user-select: none;
+          -ms-user-select: none;
+              user-select: none;
+}
+
 a {
     border: none;
     outline: none;
