--- a/category.css
+++ b/category.css
@@ -5,7 +5,7 @@ body {
     ". side main . ."  
     "footer footer footer footer footer" ;
     grid-template-columns: 1fr 350px 1150px 220px 1fr;
-    grid-template-rows: 100px 700px max-content 250px;
+    grid-template-rows: 100px 700px max-content 200px;
 }
 
 #side_cate {
@@ -17,7 +17,11 @@ body {
     height: max-content;
 }
 
-#side_cate div {
+#side_cate > div {
+    box-shadow: var(--box-shadow);
+}
+
+#side_cate_nav div {
     box-shadow: var(--box-shadow);
 }
 
@@ -26,13 +30,28 @@ body {
     gap: 1px;
 }
 
+.side_cate_nav_header {
+    background-image: linear-gradient(115deg, deepskyblue, violet);
+    border: 3px solid white;
+    color: white;
+    display: grid;
+    font-size: 24px;
+    font-weight: bold;
+    height: 65px;
+    letter-spacing:2px;
+    margin-left: -2px;
+    place-content: center;
+    width: 100%;
+}
+
 .side_cate_nav_item_header {
     background-color: white;
     border: 3px solid white;
     display: grid;
+    font-size: 18px;
     height: 50px;
     margin-left: -2px;
-    place-content: center;
+    place-content: center left;
     width: 100%;
 }
 
@@ -44,25 +63,41 @@ body {
     font-weight: bold;
     grid-template-columns: 1fr;
     height: max-content;
-    place-content: center;
-    text-align: center;
+    place-content: center left;
+    text-indent: 15px;
 }
 
 .side_cate_nav_sub_item {
-    background-color: gray;
+    background-color: RoyalBlue;
     color: white;
     display: none;
     height: 35px;
-    place-content: center;
+    place-content: center left;
 }
 
-
-#side_cate_option {
-
+.side_cate_option {
+    background-color: white;
+    display: grid;
+    gap: 5px;;
+    line-height: 25px;
+    padding: 1px 3px;
+    padding-bottom: 5px;
 }
 
-#side_cate_filter {
+.side_cate_option_item {
+    box-shadow: none;
+    display: grid;
+    grid-auto-flow: column;
+    place-content: center left;
+}
 
+.side_cate_option_item * {
+    height: 100%;
+    margin: auto 5px;
+}
+
+.side_cate_option_item input {
+    margin-left: 15px;
 }
 
 #main_cate {
@@ -71,19 +106,22 @@ body {
     grid-template-areas: 
     "main_cate_header main_cate_header main_cate_header main_cate_header main_cate_header";
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 65px;
     height: max-content;
     padding: 10px;
 }
 
 #main_cate_header {
-    background-image: linear-gradient(115deg, deepskyblue, violet);
+    background-image: linear-gradient(115deg, aqua, fuchsia);
+    color: white;
+    display: grid;
     font-size: 25px;
     font-weight: bolder;
     grid-area: main_cate_header;
-    margin: 15px auto;
+    height: 100%;
+    place-content: center;
     text-align: center;
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
+    width: 100%;
 }
 
 .main_cate_item {
@@ -99,4 +137,10 @@ body {
 .main_cate_item img{
     width: 100%;
     margin: auto;
+}
+
+@media screen and (max-width: 1600px) {
+    body {
+        grid-template-columns: 1fr 300px 900px 300px 1fr;
+    }
 }
