--- a/cart.css
+++ b/cart.css
@@ -6,7 +6,7 @@ body {
     ". . . " 
     "footer footer footer";
     grid-template-columns: 1fr 1800px 1fr;
-    grid-template-rows: 100px 150px max-content 150px 200px;
+    grid-template-rows: 100px 50px max-content 50px 200px;
 }
 
 #cart {
@@ -59,5 +59,11 @@ body {
 
 #cart_summary button:active {
     box-shadow: none;
-    transform: translate(2px, 2px);
+    transform: translate(1px, 1px);
+}
+
+@media screen and (max-width: 1600px) {
+    body {
+        grid-template-columns: 1fr 1500px 1fr;
+    }
 }
