--- a/index.css
+++ b/index.css
@@ -65,17 +65,9 @@ body > div {
     z-index: 9999;
 }
 
-#top a {
-    display: grid;
-    height: 100%;
-    margin: auto;
-    place-content: center;
-}
-
 #top > div {
     background-color: var(--background-color);
     box-shadow: var(--box-shadow);
-    display: grid;
     place-content: center;
     text-align: justify;
 }
@@ -184,9 +176,11 @@ body > div {
 
 .pc_button {
     color: white;
+    display: grid;
     height: 100%;
     font-size: var(--font-size);
     font-weight: bold;
+    place-content: center;
     transition: background-color 0.2s;
 }
 
@@ -238,6 +232,7 @@ body > div {
 #top_nav {
     background-image: linear-gradient(115deg, deepskyblue, violet);
     box-shadow: none;
+    display: grid;
     font-size: var(--font-size);
     font-weight: bold;
     grid-area: top_nav;
@@ -250,8 +245,10 @@ body > div {
 
 .top_nav_link {
     color: white;
+    display: grid;
     height: 96.5%;
     padding: 0px 50px;
+    place-content: center;
     transition: background-color 0.2s;
 }
 
@@ -365,7 +362,7 @@ body > div {
 #main_panel {
     background-color: rgb(255, 255, 255, 0);
     box-shadow: none;
-    font-size: 20px;
+    font-size: var(--font-size);
     gap: 50px;
     grid-area: main;
     grid-template-columns: 1fr;
@@ -387,7 +384,7 @@ body > div {
     background-image: linear-gradient(115deg, aqua, fuchsia);
     color: white;
     display: grid;
-    font-size: 35px;
+    line-height: calc(var(--font-size) + 10px);
     font-weight: bolder;
     letter-spacing: 1px;
     padding: 25px 0px;
@@ -411,15 +408,6 @@ body > div {
     margin: 0px auto;
     text-align: center;
     width: 100%;
-}
-
-.main_section_content_item_name {
-    font-size: 25px;
-    font-weight: bold;
-}
-
-.main_section_content_item > div {
-    margin: 15px 0px;
 }
 
 .main_section_content_item > img {
@@ -511,17 +499,30 @@ body > div {
 }
  
 @media screen and (max-width: 768px) {
+    :root {
+        --font-size: 10px;
+    }
+
     body {
         grid-template-areas:     
         "top" 
         "main" 
         "footer" ;
+        grid-template-columns: 100vw;
+        grid-template-rows: 60px max-content 250px;
+    }
+
+    #top {
+        grid-template-areas: 
+        "header" ;
         grid-template-columns: 1fr;
-        grid-template-rows: 125px max-content 250px;
+        grid-template-rows: 60px;
+        grid-template-columns: 100%;
+        width: 100%;
     }
 
     #header {
-        grid-template-columns: 55px 50px 50px 100px;
+        grid-template-columns: 55px 50px 1fr 50px;
     }
 
     #brand {
@@ -536,9 +537,60 @@ body > div {
         display: none;
     }
 
+    #top_nav {
+        display: none;
+    }
+
+    #slide_show {
+        display: none;
+    }
+
     #side_nav {
         display: none;
     }
 
+    .main_section {
+        background-color: var(--background-color);
+        box-shadow: var(--box-shadow);
+        display: grid;
+        gap: 20px;
+        grid-template-columns: 1fr;
+        grid-template-rows: 65px 1fr;
+        height: max-content;
+        place-content: start center;
+    }
 
+    .main_section_header {
+        background-image: linear-gradient(115deg, aqua, fuchsia);
+        color: white;
+        display: grid;
+        font-size: 25px;
+        font-weight: bolder;
+        letter-spacing: 1px;
+        padding: 15px 0px;
+        place-content: center left;
+        text-indent: 20px;
+        text-shadow: 1px 1px 1px blue;
+    }
+
+    .main_section_content {
+        gap: 10px;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+
+    .main_section_content_item {
+        margin: 0px auto;
+        text-align: center;
+        width: 100%;
+    }
+    
+    .main_section_content_item > img {
+        transition: transform 0.2s;
+        width: 100%;
+    }
+    
+    .main_section_content_item > img:hover {
+        transform: scale(1.05);
+    }
 }
