--- a/index.css
+++ b/index.css
@@ -327,14 +327,18 @@ body > div {
     opacity: 1;
 }
 
+#super_side_nav {
+    display: block;
+    position: sticky;
+    top: 100px;
+}
+
 #side_nav {
     background-color: transparent;
     box-shadow: none;
     grid-area: side_nav;
     grid-template-columns: 1fr;
     place-content: start;
-    position: sticky;
-    top: 100px;
 }
 
 #side_nav > a {
@@ -384,12 +388,12 @@ body > div {
     background-image: linear-gradient(115deg, aqua, fuchsia);
     color: white;
     display: grid;
-    line-height: calc(var(--font-size) + 10px);
+    font-size: calc(var(--font-size) + 10px);
     font-weight: bolder;
     letter-spacing: 1px;
     padding: 25px 0px;
     place-content: center left;
-    text-indent: 70px;
+    text-indent: 50px;
     text-shadow: 1px 1px 1px blue;
 }
 
@@ -504,12 +508,14 @@ body > div {
     }
 
     body {
+        gap: 0px;
         grid-template-areas:     
         "top" 
+        "ssn"
         "main" 
         "footer" ;
         grid-template-columns: 100vw;
-        grid-template-rows: 60px max-content 250px;
+        grid-template-rows: 60px 50px max-content 250px;
     }
 
     #top {
@@ -545,8 +551,39 @@ body > div {
         display: none;
     }
 
+    #super_side_nav {
+        background-color: dodgerblue;
+        border: none;
+        grid-area: ssn;
+        position: relative;
+        top: 0px;
+    }
+
+    #super_side_nav:hover {
+        position: sticky;
+        top: 0px;
+        z-index: 10001;
+    }
+
+    #super_side_nav:hover #side_nav{
+        background: deepskyblue;
+        display: grid;
+        position: absolute;
+        top: 50px;
+        width: 100%;
+        z-index: 10000;
+    }
+
     #side_nav {
         display: none;
+    }
+
+    #side_nav > a {
+        background-color: white;
+    }
+
+    #main_panel {
+        margin-top: 25px;
     }
 
     .main_section {
