--- a/product.css
+++ b/product.css
@@ -23,4 +23,49 @@ body {
 
 #product_detail {
     grid-area: product_detail;
+    grid-template-columns: 100%;
+    padding: 15px;
+    place-content: start center;
+}
+
+#product_detail_name {
+    background-image: linear-gradient(115deg, deepskyblue, violet);
+    color: white;
+    font-size: calc(var(--font-size) + 15px);
+    padding: 10px;
+    text-align: left;
+}
+
+#product_detail_price {
+    color: sandybrown;
+    font-size: calc(var(--font-size) + 10px);
+    padding: 10px;
+    text-align: left;
+}
+
+#product_detail_size {
+    display: grid;
+    font-size: calc(var(--font-size) + 10px);
+    gap: 10px;
+    grid-template-columns: 100%;
+    padding: 10px;
+    text-align: left;
+}
+
+.radio_size {
+    background-color: white;
+    border: 3px solid dodgerblue;
+    border-radius: 5px;
+    color: dodgerblue;
+    font-size: calc(var(--font-size) + 5px);
+    padding: 10px;
+    width: max-content;
+}
+
+.radio_size:hover {
+    background-color: aliceblue;
+}
+
+.radio_size:active {
+    background-color: lightskyblue;
 }
