--- a/category.css
+++ b/category.css
@@ -1,10 +1,10 @@
 body {
     grid-template-areas: 
-    "top top top top top " 
-    ". side main . ." 
-    ". side main . ."  
-    "footer footer footer footer footer" ;
-    grid-template-columns: 1fr 350px 1150px 220px 1fr;
+    "top top top top" 
+    ". side main ." 
+    ". side main ."  
+    "footer footer footer footer" ;
+    grid-template-columns: 1fr 350px 1350px 1fr;
     grid-template-rows: 100px 700px max-content 200px;
 }
 
@@ -141,7 +141,7 @@ body {
 
 @media screen and (max-width: 1600px) {
     body {
-        grid-template-columns: 1fr 300px 800px 300px 1fr;
+        grid-template-columns: 1fr 350px 850px 1fr;
     }
 }
 
@@ -152,7 +152,7 @@ body {
         "main" 
         "footer" ;
         grid-template-columns: 100%;
-        grid-template-rows: 60px max-content 200px;
+        grid-template-rows: 60px max-content max-content;
     }
 
     #main_cate {
