--- a/cart.css
+++ b/cart.css
@@ -6,7 +6,7 @@ body {
     ". . . " 
     "footer footer footer";
     grid-template-columns: 1fr 1800px 1fr;
-    grid-template-rows: 100px 1fr max-content 1fr 200px;
+    grid-template-rows: 100px 1fr max-content 1fr max-content;
 }
 
 #cart {
@@ -15,7 +15,7 @@ body {
     font-size: var(--font-size);
     grid-area: cart;
     grid-auto-flow: column;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 5fr 2fr;
 }
 
 #cart_list {
@@ -27,7 +27,7 @@ body {
     box-shadow: var(--box-shadow);
     display: grid;
     grid-auto-flow: column;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 5fr;
     grid-template-rows: 1fr;
     margin: 15px;
 }
@@ -39,8 +39,16 @@ body {
 
 .cart_item_info {
     display: grid;
-    padding: 15px;
+    gap: 10px;
+    grid-template-columns: 1fr;
+    padding: 25px;
     place-content: start;
+}
+
+.cart_item_name {
+    color: dodgerblue;
+    font-size: calc(var(--font-size) + 5px);
+    font-weight: bolder;
 }
 
 #cart_summary {
@@ -63,6 +71,7 @@ body {
     font-weight: bolder;
     height: 50px;
     margin: auto;
+    margin-top: 15px;
     place-content: center;
     width: 100%;
 }
