--- a/product.css
+++ b/product.css
@@ -60,6 +60,8 @@ body {
     font-size: calc(var(--font-size) + 5px);
     gap: 10px;
     grid-template-columns: 100%;
+    place-content: center;
+    text-align: center;
 }
 
 .radio_size {
@@ -68,6 +70,7 @@ body {
     border-radius: 5px;
     color: dodgerblue;
     font-size: calc(var(--font-size) + 5px);
+    margin: auto;
     padding: 10px;
     width: max-content;
 }
@@ -83,6 +86,7 @@ body {
     border-radius: 5px;
     color: violet;
     font-size: calc(var(--font-size) + 5px);
+    margin: auto;
     padding: 10px;
     width: max-content;
 }
@@ -99,7 +103,7 @@ body {
     box-shadow: 2px 2px 4px gray;
     color: white;
     display: grid;
-    font-size: var(--font-size);
+    font-size: calc(var(--font-size) + 5px);
     font-weight: bolder;
     height: 40px;
     margin: auto;
@@ -119,7 +123,7 @@ body {
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1080px) {
     body {
         grid-template-areas: 
         "top" 
