--- a/index.css
+++ b/index.css
@@ -21,6 +21,12 @@ a {
     text-decoration: none;
 }
 
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
 body {
     background-image: linear-gradient(115deg, MistyRose, PowderBlue);
     display: grid;
