--- a/cart.css
+++ b/cart.css
@@ -30,6 +30,11 @@ body {
     grid-template-columns: 1fr 5fr;
     grid-template-rows: 1fr;
     margin: 15px;
+    transition: 0.2s;
+}
+
+.cart_item:hover {
+    transform: scale(1.01, 1.01);
 }
 
 .cart_item_img {
